syntax = "proto3";
package coordinator;

option go_package = "./coordinator";

message CoordinatorInput {
    string data = 1;
    string flag = 2;
}

message CoordinatorOutput {
    repeated string fileName = 1;
    repeated string  matches = 2;
    string totalMatchCount = 3;
}

service CoordinatorService {
  rpc FetchCoordinatorOutput(CoordinatorInput) returns (CoordinatorOutput) {}
}